--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -21,3 +21,7 @@
   font-family: josfin-regular;
   src: url(../../public/fonts/josefinsans_regular.woff2);
 }
+@font-face {
+  font-family: josfin-thin;
+  src: url(../../public/fonts/josefin-sans.light.ttf);
+}
