--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -2,14 +2,84 @@
 
 .footer {
   width: 100%;
-  height: 500px;
   background-color: var(--bg-cream);
   padding: 2rem 5rem;
-  font-family: josfin-regular;
+  font-family: josfin-thin;
+  font-weight: 700;
 
   .footer-top {
     display: flex;
-    gap: 5rem;
-    
+    gap: 7rem;
+
+    .footer-top-item {
+      h1 {
+        font-size: 0.9rem;
+        color: var(--text-black);
+        margin-bottom: 1rem;
+      }
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+
+        p {
+          font-family: josfin-regular;
+          font-weight: 200;
+          font-size: 1.2rem;
+          color: var(--text-grey);
+          margin-bottom: 0.5rem;
+          cursor: pointer;
+          transition: all 0.3s ease-in-out;
+
+          &:hover {
+            color: var(--text-black);
+            text-decoration: underline;
+          }
+        }
+      }
+    }
   }
+
+  .footer-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-top: 2rem;
+
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
+
+    h1 {
+      font-size: 1.5rem;
+      color: var(--text-grey);
+      margin-top: 1rem;
+    }
+  }
+}
+
+
+// 📱 Mobile View (max-width: 720px)
+@media (max-width: 720px) {
+  .footer-top {
+    flex-direction: column;
+    gap: 2rem;
+    align-items: flex-start;
+  }
+
+  .footer-top-item {
+    h1 {
+      font-size: 1rem;
+    }
+
+    ul {
+      p {
+        font-size: 1rem;
+      }
+    }
+  }
+
+
 }
