--- a/frontend/src/components/Nav.scss
+++ b/frontend/src/components/Nav.scss
@@ -4,6 +4,7 @@
     width: 100%;
     margin-bottom: 2.5rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1.25rem;
@@ -12,43 +13,60 @@
     background-color: transparent;
     position: absolute;
     z-index: 1000;
+    color: white;
 
-    a {
-        font-family: josfin-thin;
-        font-weight: 700;
-        text-decoration: none;
-        color: #000;
-        font-size: 1rem;
-        position: relative;
-        transition: all 0.3s ease-in-out;
-
-        &:hover {
-            color: #444;
-        }
-
-        &.active::after {
-            content: "";
-            position: absolute;
-            left: 0;
-            bottom: -3px;
-            width: 100%;
-            height: 2px;
-            background-color: black;
-        }
+    h1 {
+        font-size: 3rem;
+        text-align: center;
+        font-family: josfin-regular;
     }
 
-    @media (max-width: 720px) {
-        flex-wrap: wrap;
-        gap: 1rem;
-        padding: 1rem 0.5rem;
-
+    .nav-links {
         a {
-            font-size: 0.9rem;
+
+            font-family: josfin-thin;
+            font-weight: 700;
+            text-decoration: none;
+            color: white;
+            font-size: 1rem;
+            position: relative;
+            transition: all 0.3s ease-in-out;
+            margin-left: 1rem;
+
+            &:hover {
+                color: #444;
+            }
+
+            &.active::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: -3px;
+                width: 100%;
+                height: 2px;
+                background-color: black;
+            }
         }
+
+        @media (max-width: 720px) {
+            flex-wrap: wrap;
+            gap: 1rem;
+            padding: 1rem 0.5rem;
+
+            a {
+                font-size: 0.9rem;
+            }
+        }
+
     }
 
 }
 
 .custom-navbar:hover {
     background-color: var(--bg-cream);
+    color: var(--text-dark);
+
+    a {
+        color: var(--text-dark);
+    }
 }
