--- a/frontend/src/components/Nav.scss
+++ b/frontend/src/components/Nav.scss
@@ -12,6 +12,7 @@
     font-family: 'Georgia', serif;
     background-color: transparent;
     position: absolute;
+    top: 0;
     z-index: 1000;
     color: white;
 
