--- a/frontend/src/pages/Products.css/Products.scss
+++ b/frontend/src/pages/Products.css/Products.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .products-container {
     display: flex;
     flex-wrap: wrap;
@@ -25,19 +27,23 @@
 
     img {
         width: 100%;
-        height: 200px;
+
         object-fit: cover;
     }
 
     h1 {
         font-size: 1.1rem;
         margin: 0.5rem;
+        font-family: josfin-regular;
     }
 
     small {
         display: block;
         margin: 0 0.5rem;
         color: #666;
+        font-family: josfin-thin;
+        font-weight: 700;
+        font-size: 1rem;
     }
 
     .product-footer {
@@ -51,6 +57,8 @@
             color: white;
             border: none;
             padding: 0.5rem 1rem;
+            font-family: josfin-thin;
+            font-weight: 700;
             border-radius: 5px;
             cursor: pointer;
 
@@ -67,6 +75,8 @@
         width: 50%;
         color: #2d72d9;
         text-decoration: none;
+        font-family: josfin-thin;
+        font-weight: 700;
 
         &:hover {
             text-decoration: underline;
