--- a/frontend/src/pages/admin/ProductDetails.scss
+++ b/frontend/src/pages/admin/ProductDetails.scss
@@ -1,1 +1,57 @@
 @import "../../styles/variables.scss";
+
+.product-detail-container {
+    width: 100%;
+    display: flex;
+    border: 2px solid red;
+    margin-top: 15rem;
+    justify-content: center;
+    gap: 2rem;
+
+    img {
+        width: 50%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .left {
+        width: 50%;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+
+
+        h1 {
+            font-size: 2.5rem;
+            font-weight: 300;
+            margin-bottom: 1rem;
+        }
+
+        h2 {
+            font-size: 2rem;
+            color: var(--text-grey);
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 1.2rem;
+            color: var(--text-black);
+            margin-bottom: 2rem;
+        }
+
+        button {
+            padding: 0.5rem 1rem;
+            background-color: var(--bg-cream);
+            border: none;
+            cursor: pointer;
+            font-size: 1.2rem;
+            transition: background-color 0.3s;
+
+            &:hover {
+                background-color: var(--bg-white);
+            }
+        }
+    }
+
+
+}
