--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -46,6 +46,11 @@
     flex-direction: column;
     align-items: start;
     margin-top: 2rem;
+
+    img {
+      width: 100%;
+      // max-width: 200px;
+    }
   }
 
 
