--- a/src/pages/Register.scss
+++ b/src/pages/Register.scss
@@ -1,5 +1,59 @@
 @import "../styles/variables.scss";
 
+.radio-group {
+    margin: 1.5rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+
+    .radio-label-title {
+        font-family: josfin-regular;
+        font-size: 1.25rem;
+        font-weight: 600;
+        color: var(--text-dark) // light text (dark mode)
+
+    }
+
+    .radio-options {
+        display: flex;
+        gap: 2rem;
+
+        .radio-option {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            font-size: 1.05rem;
+            color: #cbd5e0; // soft light gray
+            cursor: pointer;
+            transition: all 0.2s ease;
+            font-family: josfin-thin;
+            font-weight: 700;
+            
+            input[type="radio"] {
+                font-family: josfin-thin;
+                width: 18px;
+                height: 18px;
+                accent-color: #6638da; // teal/blue highlight
+                cursor: pointer;
+                transition: transform 0.2s ease;
+                transform: scale(1);
+
+                &:hover {
+                    transform: scale(1.2);
+                }
+            }
+
+            &:hover {
+                color: #ffffff;
+            }
+        }
+    }
+}
+
+
+
+
+
 .register-container {
     width: 100%;
     margin-top: 15rem;
