--- a/src/pages/Cart.scss
+++ b/src/pages/Cart.scss
@@ -147,3 +147,37 @@
         }
     }
 }
+
+
+@media (max-width:720px) {
+    .cart-container {
+        margin-top: 15rem;
+        background-color: var(--primary-bg);
+        color: var(--primary-text);
+        padding: 2rem;
+        min-height: 100vh;
+
+        ul {
+            list-style: none;
+            padding: 0;
+            font-family: josfin-regular;
+
+            li {
+                display: flex;
+                flex-direction: column;
+                gap: 1.2rem;
+
+                img {
+                    width: 50%;
+                    height: 50%;
+                    object-fit: cover;
+                    border-radius: 8px;
+                }
+            }
+
+        }
+
+
+
+    }
+}
