--- a/src/pages/admin/CreateProduct.scss
+++ b/src/pages/admin/CreateProduct.scss
@@ -7,7 +7,8 @@
     box-shadow: 0 0 15px var(--bg-black-15);
     color: var(--text-black);
     gap: 1.5rem;
-    margin: 10rem auto;
+    margin-top: 10rem;
+    margin-bottom: 8rem;
     font-family: josfin, sans-serif;
 
     input,
@@ -53,5 +54,15 @@
             transform: scale(1.05);
             background: linear-gradient(135deg, #000000, #2e2e2e);
         }
+    }
+}
+
+
+
+
+@media (max-width:720px) {
+    .create-product-form {
+
+        margin-top: 15rem;
     }
 }
