--- a/src/pages/Cart.scss
+++ b/src/pages/Cart.scss
@@ -24,6 +24,7 @@
     color: var(--primary-text);
     padding: 2rem;
     min-height: 100vh;
+    font-family: josfin-regular;
 
     ul {
         list-style: none;
