--- a/src/pages/user/UserProfile.scss
+++ b/src/pages/user/UserProfile.scss
@@ -11,6 +11,7 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     margin-top: 12rem;
     margin-bottom: 7rem;
+    font-family: josfin-regular;
 }
 
 .profile-img {
