--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,12 +1,12 @@
 @import "../../src/styles/variables.scss";
 
+
+@import "../../src/styles/variables.scss";
+
 .custom-navbar {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.25rem;
     padding: 1.25rem;
     font-family: 'Georgia', serif;
     background-color: var(--bg-cream);
@@ -15,23 +15,52 @@
     z-index: 1000;
     color: var(--text-dark);
 
+    .navbar-header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
     h1 {
-        font-size: 3rem;
-        text-align: center;
+        font-size: 2rem;
         font-family: josfin-regular;
     }
 
-    .nav-links {
-        a {
+    .hamburger {
+        display: none;
+        flex-direction: column;
+        cursor: pointer;
+        gap: 5px;
 
+
+        .bar {
+            width: 25px;
+            height: 3px;
+            background-color: var(--text-dark);
+            transition: 0.4s;
+        }
+
+        .bar.open {
+            background-color: black;
+        }
+    }
+
+    .nav-links {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        margin-top: 1rem;
+        flex-wrap: wrap;
+
+        a {
             font-family: josfin-thin;
             font-weight: 700;
             text-decoration: none;
-            font-size: 1rem;
-            position: relative;
-            transition: all 0.3s ease-in-out;
-            margin-left: 1rem;
+            font-size: 1.2rem;
             color: var(--text-dark);
+            transition: all 0.3s ease;
 
             &:hover {
                 color: #444;
@@ -40,36 +69,54 @@
             &.active::after {
                 content: "";
                 position: absolute;
-                left: 0;
                 bottom: -3px;
+                left: 0;
                 width: 100%;
                 height: 2px;
-                background-color: black;
+
             }
         }
+    }
 
-        @media (max-width: 720px) {
-            flex-wrap: wrap;
-            gap: 1rem;
-            padding: 1rem 0.5rem;
+    @media (max-width: 720px) {
+        align-items: flex-start;
+
+        .navbar-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+        }
+
+        .hamburger {
+            display: flex;
+        }
+
+        .nav-links {
+            flex-direction: column;
+            width: 100%;
+            display: none;
 
             a {
-                font-size: 0.9rem;
+                font-size: 1rem;
+                margin: 0.5rem 0;
+            }
+
+            &.show {
+                display: flex;
             }
         }
-
     }
 }
-
-
-
 
 .transparent-navbar {
     background-color: transparent !important;
     color: white;
 
     h1,
-    .nav-links a {
+    .nav-links a,
+    .hamburger .bar {
         color: white !important;
+
     }
 }
