--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -75,7 +75,7 @@
                 left: 0;
                 width: 100%;
                 height: 2px;
-                background-color: black;
+                background-color: rgb(85, 83, 83);
                 transform: scaleX(0); // Start hidden
                 transform-origin: left; // Animate from left
                 transition: transform 0.3s ease;
